--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "fsd-nest-template",
-	"description": "Pure Next.js FSD template with jest, react testing lib, stylelint, prettier and eslint",
+	"name": "kanban-board-clone",
+	"description": "A Kanban board clone built with Next.js, Express, MongoDB and Tailwind CSS.",
 	"author": {
-		"name": "@yunglocokid (Dmitriy Bratchikov)",
-		"url": "https://github.com/yunglocokid"
+		"name": "Team19",
+		"url": "https://github.com/KostasV1l/kanban-board-clone"
 	},
 	"version": "0.1.0",
 	"private": true,
@@ -19,7 +19,6 @@
 	},
 	"dependencies": {
 		"next": "14.2.3",
-		"normalize.css": "^8.0.1",
 		"react": "^18",
 		"react-dom": "^18"
 	},
@@ -41,12 +40,6 @@
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "^3.2.5",
-		"sass": "^1.77.1",
-		"stylelint": "^16.5.0",
-		"stylelint-config-standard": "^36.0.0",
-		"stylelint-config-standard-scss": "^13.1.0",
-		"stylelint-order": "^6.0.4",
-		"stylelint-order-config-standard": "^0.1.3",
 		"ts-node": "^10.9.2",
 		"typescript": "^5",
 		"typescript-eslint": "^7.10.0"
