--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,26 +1,25 @@
 {
-	"trailingComma": "all",
-	"tabWidth": 2,
-	"useTabs": true,
-	"singleQuote": false,
-	"jsxSingleQuote": false,
-	"semi": false,
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "useTabs": false,
+    "singleQuote": false,
+    "jsxSingleQuote": false,
+    "semi": true,
+    "printWidth": 120,
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
 
-	"plugins": ["@ianvs/prettier-plugin-sort-imports"],
+    "plugins": ["@ianvs/prettier-plugin-sort-imports"],
 
-	"importOrder": [
-		"<TYPES>",
-		"",
-		"react",
-		"",
-		"<THIRD_PARTY_MODULES>",
-		"",
-		"^(@shared|@entities|@features|@widgets|@pages|@app)(/.*)$",
-		"",
-		"^(?!.*[.]scss$)[./].*$",
-		".scss$",
-		"^[.]"
-	],
-	"importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
-	"importOrderTypeScriptVersion": "5.0.0"
+    "importOrder": [
+        "<TYPES>",
+        "react",
+        "<THIRD_PARTY_MODULES>",
+        "^(@shared|@entities|@features|@widgets|@pages|@app)(/.*)$",
+        "^(?!.*[.]scss$)[./].*$",
+        ".scss$",
+        "^[.]"
+    ],
+    "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
+    "importOrderTypeScriptVersion": "5.0.0"
 }
