--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,13 @@
 		"test:watch": "jest --watch"
 	},
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.2.5",
 		"@fontsource-variable/open-sans": "^5.2.5",
 		"@fontsource/lato": "^5.2.5",
 		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
+		"@radix-ui/react-tabs": "^1.1.9",
 		"@tailwindcss/postcss": "^4.1.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
