--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.503.0",
 		"next": "14.2.3",
+		"next-themes": "^0.4.6",
 		"postcss": "^8.5.3",
 		"react": "^18",
 		"react-dom": "^18",
