--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
 	},
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.2.5",
+		"@fontsource-variable/montserrat": "^5.2.5",
 		"@fontsource-variable/open-sans": "^5.2.5",
 		"@fontsource/lato": "^5.2.5",
 		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-avatar": "^1.1.7",
 		"@radix-ui/react-dialog": "^1.1.11",
+		"@radix-ui/react-dropdown-menu": "^2.1.12",
 		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-separator": "^1.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
