--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
 		"@radix-ui/react-tabs": "^1.1.9",
 		"@radix-ui/react-tooltip": "^1.2.4",
 		"@tailwindcss/postcss": "^4.1.4",
+		"@tanstack/react-query": "^5.74.4",
+		"@tanstack/react-query-devtools": "^5.74.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.503.0",
