--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
 		"@fontsource-variable/open-sans": "^5.2.5",
 		"@fontsource/lato": "^5.2.5",
 		"@hookform/resolvers": "^5.0.1",
+		"@radix-ui/react-alert-dialog": "^1.1.11",
 		"@radix-ui/react-avatar": "^1.1.7",
 		"@radix-ui/react-dialog": "^1.1.11",
 		"@radix-ui/react-dropdown-menu": "^2.1.12",
