--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
 		"@tanstack/react-query-devtools": "^5.74.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.503.0",
 		"next": "14.2.3",
 		"next-themes": "^0.4.6",
