--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
 		"@tailwindcss/postcss": "^4.1.4",
 		"@tanstack/react-query": "^5.74.4",
 		"@tanstack/react-query-devtools": "^5.74.6",
+		"axios": "^1.9.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"js-cookie": "^3.0.5",
@@ -46,13 +47,15 @@
 		"react-dom": "^18",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4",
-		"zod": "^3.24.3"
+		"zod": "^3.24.3",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^4.2.1",
 		"@testing-library/jest-dom": "^6.4.5",
 		"@testing-library/react": "^15.0.7",
 		"@types/jest": "^29.5.12",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
