--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
 		"clsx": "^2.1.1",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.503.0",
-		"next": "14.2.3",
+		"next": "^15.3.1",
 		"next-themes": "^0.4.6",
 		"postcss": "^8.5.3",
 		"react": "^18",
