--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
 		"@fontsource-variable/inter": "^5.2.5",
 		"@fontsource-variable/montserrat": "^5.2.5",
 		"@fontsource-variable/open-sans": "^5.2.5",
