--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.12",
 		"@radix-ui/react-label": "^2.1.4",
 		"@radix-ui/react-popover": "^1.1.11",
+		"@radix-ui/react-select": "^2.2.2",
 		"@radix-ui/react-separator": "^1.1.4",
 		"@radix-ui/react-slot": "^1.2.0",
 		"@radix-ui/react-tabs": "^1.1.9",
@@ -48,6 +49,7 @@
 		"postcss": "^8.5.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4",
 		"zod": "^3.24.3",
