--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
 		"postcss": "^8.5.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"socket.io-client": "^4.8.1",
 		"sonner": "^2.0.3",
 		"tailwind-merge": "^3.2.0",
 		"tailwindcss": "^4.1.4",
